# Realmz-Character-Editor

./: .gitattributes  .gitignore  NOTICE.md  README.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml
src/: App.css  App.test.tsx  App.tsx
src/domain/: characterFile.test.ts  characterFile.ts  editorLogic.ts  macRoman.ts  metadata.test.ts  metadata.ts  types.ts
tests/e2e/: editor.spec.ts
tools/realmz-asset-extractor/: generate-metadata.mjs
tools/realmz-asset-extractor/native/: CMakeLists.txt  extract-realmz-assets.cpp
